added idea settings