@@ -7,3 +7,14 @@
 * Grep Console
 * Lombok Plugin
 * Markdown (Support?)
+
+#### IDEA Settings
+`/Applications/IntelliJ IDEA 14.app/Contents/bin`
+
+```
+-Xms512m
+-Xmx2048m
+-XX:MaxPermSize=350m
+-XX:ReservedCodeCacheSize=225m
+-XX:+UseCompressedOops
+```
